--- a/css/styles.css
+++ b/css/styles.css
@@ -585,6 +585,7 @@ background-color: #31d0aa;
 
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
         visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+       background-color: rgba(46, 47, 66, 0.4);
 }
 
 .backdrop.is-open {
@@ -605,6 +606,8 @@ background-color: #31d0aa;
     transform: translate(-50%, -50%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     padding: 24px;
+    padding: 72px 24px 24px 24px;
+
 
 
 }
@@ -629,7 +632,19 @@ background-color: #31d0aa;
         padding: 0;
         transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
             border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+            cursor: pointer;
    
+}
+
+.button-close:hover{
+    background-color: #404bbf;
+    border: none;
+    fill:#ffffff
+}
+.button-close:focus{
+    background-color: #404bbf;
+        border: none;
+        fill: #ffffff
 
 }
 
@@ -638,7 +653,7 @@ background-color: #31d0aa;
 }
 
 .close-icon{
-    fill:#2E2F42
+    fill: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .icon-close:hover{
     background-color: #404BBF;
@@ -665,14 +680,18 @@ background-color: #31d0aa;
         letter-spacing: 0.04em;
         color: #8e8f99;
 }
-
+.modal-comment{
+    margin-bottom: 16px;
+}
 .modal-input{
     width: 100%;
-    height: 58px;
-    border: 1px solid rgba(17, 17, 17, 0.05);
+    height: 40px;
+    border: 1px solid rgba(46,47,66,0.4);
     border-radius: 4px;
     padding-left: 38px;
+    background-color: transparent;
     outline: transparent;
+    border-color: #4D5AE5
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-input:focus{
@@ -687,11 +706,11 @@ background-color: #31d0aa;
    
     font-weight: 400;
         font-size: 12px;
-        line-height: 1.16667;
+        line-height: 1.17;
         letter-spacing: 0.04em;
         color: #8e8f99;
         display: block;
-        margin-botton: 4px;
+        margin-bottom: 4px;
 }
 .input-wrapper {
     position: relative;}
@@ -702,16 +721,25 @@ background-color: #31d0aa;
     left: 16px;
     top: 50%;
     transform: translateY(-50%);
-    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 .modal-textarea{
     resize: none;
     width: 100%;
-    height: 137px;
+    height: 120px;
     border: 1px solid rgba(17, 17, 17, 0.05);
         border-radius: 4px;
         outline: transparent;
         transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        font-size: 12px;
+        line-height: 1.17;;
+        letter-spacing: 0.04em;
+        color: rgba(46, 47, 66, 0.4);
+        background-color: transparent;
+        padding: 8px 16px;
+        outline: transparent;
+        resize: none; 
+        border-color: #4D5AE5
         
         
 }
@@ -723,17 +751,26 @@ font-weight: 400;
     color: #8e8f99;
 }
 
+
+.modal-checkbox{
+    margin-bottom: 24px;
+
+}
+.modal-check-icon{
+
+
+}
 .modal-check-text{
     font-weight: 400;
         font-size: 12px;
-        line-height: 1.16667;
+        line-height: 1.7;
         letter-spacing: 0.04em;
         color: #8e8f99;
         display flex;
         align-items: center;
         
 }
-..modal-check-text span{
+..modal-check-text {
         display: flex;
         align-items: center;
         justify-content: center;
@@ -742,7 +779,39 @@ font-weight: 400;
             border: 1px solid rgba(46, 47, 66, 0.4);
 }
 
+.modal-span{
+    width: 16px;
+    height: 16px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 2px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    fill: transparent
 
+}
+
+.send-btn{
+    display: block;
+    min-width: 169px;
+    height: 56px;
+    font-family: "Roboto",sans-serif;
+font-size: 16px;
+font-weight: 500;
+line-height: 1.5;
+letter-spacing: 0.04em;
+color: #ffffff;
+cursor: pointer;
+background-color: #4D5AE5;
+border: none;
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1)
+
+
+
+
+
+}
 
 .subscribe{
 
@@ -759,11 +828,15 @@ font-weight: 400;
         color: #fff;
         font-family: "Roboto", sans-serif;
         margin-bottom: 16px;
+        display: flex;
+}
 
+.enter-email{
+    gap: 24px;
 }
 .footer-form{
 
-    display: inline-block;
+    display: flex;
     
         
     
@@ -775,29 +848,40 @@ font-weight: 400;
         width: 264px;
         height: 40px;
         background-color: transparent;
+        font-size: 12px;
+        line-height:2;
+        letter-spacing: 0.04em;
+        padding-left: 16px;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+        color: #fffff
         
       
-        
+         
        
 
 }
 .footer-btn{
 border-radius: 4px;
-    padding: 8px 24px;
-    width: 165px;
+background-color: #4D5AE5;
+    min-width: 165px;
     height: 40px;
-    background: #4d5ae5;
+    font-family: "Roboto",sans-serif;
     font-weight: 500;
         font-size: 16px;
         line-height: 1.5;
         letter-spacing: 0.04em;
-        text-align: center;
         color: #fff;
-        border: none
+        border: none;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+
 }
 
 .subscribe-icon{
-    fill: #f4f4fd
+    fill: #f4f4fd;
+    margin-left: 16px
 }
 
 
